Update SecurityConfig to allow all requests for testing