@@ -4,7 +4,6 @@ import com.lab.sistema_de_moedas.security.JwtAuthFilter;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -17,7 +16,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -38,25 +36,8 @@ public class SecurityConfig {
             .csrf(csrf -> csrf.disable())
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                // Endpoints públicos
-                .requestMatchers("/auth/**").permitAll()
-                .requestMatchers("/alunos/criarAluno").permitAll()
-                .requestMatchers("/alunos/perfil").permitAll()
-                .requestMatchers("/alunos/buscarPorMatricula").permitAll()
-                .requestMatchers("/professores/criarProfessor").permitAll()
-                .requestMatchers("/professores/perfil").permitAll()
-                .requestMatchers("/empresas/criar").permitAll()
-                // Endpoints de transações
-                .requestMatchers("/transacoes/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/transacoes/aluno/**").permitAll()
-                .requestMatchers("/vantagens/**").permitAll()
-                .requestMatchers("/vantagens/listar").permitAll()
-                .requestMatchers("/vantagens/criar-com-imagem").permitAll()
-                .requestMatchers("/vantagens/criar-com-url").permitAll()
-
-                .requestMatchers("/alunos/historico").permitAll()
-                // Tudo o resto exige autenticação
-                .anyRequest().authenticated()
+                // ✅ PERMITE TUDO (para testes - depois ajuste!)
+                .anyRequest().permitAll()
             )
             .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
@@ -67,27 +48,62 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // 🔹 Permite suas origens de front-end
-        configuration.setAllowedOrigins(List.of(
-                "http://localhost:5500",
-                "http://127.0.0.1:5500"
+        // 🔹 SEUS DOMÍNIOS EXATOS DO VERCEL (copiados da sua imagem)
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+            // Seus domínios específicos
+            "https://moeda-estudantit-front.vercel.app",
+            "https://moeda-estudantit-front-cdozeccea-thomaaramos02s-projects.vercel.app",
+            
+            // Seus novos domínios
+            "https://moeda-estudantil-front-thomasramos02s-projects.vercel.app",
+            "https://moeda-estudantil-front-git-main-thomasramos02s-projects.vercel.app", 
+            "https://moeda-estudantil-front-r9v52a3re-thomasramos02s-projects.vercel.app",
+            
+            // Wildcards para todos os deploys do Vercel
+            "https://*.vercel.app",
+            "https://moeda-estudantil-front-*.vercel.app",
+            "https://moeda-estudantit-front-*.vercel.app",
+            
+            // Desenvolvimento local
+            "http://localhost:*",
+            "http://127.0.0.1:*",
+            "http://192.168.*:*"
         ));
         
-        // 🔹 Métodos HTTP liberados, incluindo OPTIONS para preflight
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // 🔹 Métodos HTTP permitidos
+        configuration.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", 
+            "OPTIONS", "PATCH", "HEAD"
+        ));
         
-        // 🔹 Permite todos os headers, incluindo Authorization
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
+        // 🔹 Headers permitidos
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization",        // Para JWT tokens
+            "Content-Type",         // Para JSON
+            "Accept",               // Para content negotiation
+            "Origin",               // CORS
+            "X-Requested-With",     // AJAX
+            "Access-Control-Request-Method",
+            "Access-Control-Request-Headers"
+        ));
         
-        // 🔹 Permite cookies se necessário
+        // 🔹 Headers expostos para o frontend
+        configuration.setExposedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Disposition",
+            "Access-Control-Allow-Origin",
+            "Access-Control-Allow-Credentials"
+        ));
+        
+        // 🔹 PERMITE CREDENCIAIS (IMPORTANTE para tokens JWT)
         configuration.setAllowCredentials(true);
+        
+        // 🔹 Cache de preflight requests (1 hora)
+        configuration.setMaxAge(3600L);
 
-        // 🔹 Configura URLs
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
 
         return source;
     }
-    
-
 }
